Update README and CHANGELOG for SC#12 and SC#19
- README: add SC#6/#12/#19/#22 to implemented story cards table;
  add test coverage table (29 tests); update run instructions for Java 21
- CHANGELOG: add 2026-03-04 entry covering OtherClicked, CardClicked
  toggle deselect, OtherClickedTest, and ManaIncreaseTest